--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Hello World</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div>Hello Neemeon</div>
+	<div>Hello World</div>
 </body>
 </html>
